--- a/BoldyGiffing MessagesExtension/Base.lproj/MainInterface.storyboard
+++ b/BoldyGiffing MessagesExtension/Base.lproj/MainInterface.storyboard
@@ -22,9 +22,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="528"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="CuT-K8-Ww1">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="CuT-K8-Ww1" userLabel="Thumbnail Collection View">
                                 <rect key="frame" x="16" y="20" width="288" height="508"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="xu0-ov-kmd">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="5" id="xu0-ov-kmd">
                                     <size key="itemSize" width="0.0" height="0.0"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -45,7 +45,7 @@
                     <size key="freeformSize" width="320" height="528"/>
                     <connections>
                         <outlet property="flowLayout" destination="xu0-ov-kmd" id="r95-UR-LEz"/>
-                        <outlet property="thubmnailCollectionView" destination="CuT-K8-Ww1" id="ZbM-zi-quL"/>
+                        <outlet property="thumbnailCollectionView" destination="CuT-K8-Ww1" id="lom-CM-moq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X47-rx-isc" userLabel="First Responder" sceneMemberID="firstResponder"/>
