--- a/BoldyGiffing MessagesExtension/Base.lproj/MainInterface.storyboard
+++ b/BoldyGiffing MessagesExtension/Base.lproj/MainInterface.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.19" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ObA-dk-sSI">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13156.6" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ObA-dk-sSI">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.16"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13137.5"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -19,11 +18,11 @@
                         <viewControllerLayoutGuide type="bottom" id="n38-gi-rB5"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="zMn-AG-sqS">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="528"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="CuT-K8-Ww1" userLabel="Thumbnail Collection View">
-                                <rect key="frame" x="16" y="20" width="288" height="508"/>
+                                <rect key="frame" x="5" y="0.0" width="365" height="667"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="5" id="xu0-ov-kmd">
                                     <size key="itemSize" width="0.0" height="0.0"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -35,14 +34,13 @@
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="CuT-K8-Ww1" firstAttribute="leading" secondItem="zMn-AG-sqS" secondAttribute="leadingMargin" id="4wX-ro-HlO"/>
-                            <constraint firstItem="CuT-K8-Ww1" firstAttribute="trailing" secondItem="zMn-AG-sqS" secondAttribute="trailingMargin" id="Cw2-oW-azm"/>
-                            <constraint firstItem="CuT-K8-Ww1" firstAttribute="top" secondItem="qkL-Od-lgU" secondAttribute="bottom" id="Xrd-Tn-VW4"/>
-                            <constraint firstItem="n38-gi-rB5" firstAttribute="top" secondItem="CuT-K8-Ww1" secondAttribute="bottom" id="dvD-9A-q54"/>
+                            <constraint firstItem="CuT-K8-Ww1" firstAttribute="centerY" secondItem="zMn-AG-sqS" secondAttribute="centerY" id="247-tb-YSv"/>
+                            <constraint firstItem="CuT-K8-Ww1" firstAttribute="height" secondItem="zMn-AG-sqS" secondAttribute="height" id="Ae6-Of-62F"/>
+                            <constraint firstItem="CuT-K8-Ww1" firstAttribute="centerX" secondItem="zMn-AG-sqS" secondAttribute="centerX" id="QhS-M0-aoL"/>
+                            <constraint firstItem="CuT-K8-Ww1" firstAttribute="width" secondItem="zMn-AG-sqS" secondAttribute="width" constant="-10" id="ugU-Rp-MfI"/>
                         </constraints>
                     </view>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="320" height="528"/>
                     <connections>
                         <outlet property="flowLayout" destination="xu0-ov-kmd" id="r95-UR-LEz"/>
                         <outlet property="thumbnailCollectionView" destination="CuT-K8-Ww1" id="lom-CM-moq"/>
@@ -50,7 +48,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X47-rx-isc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="33.600000000000001" y="36.881559220389811"/>
+            <point key="canvasLocation" x="32.799999999999997" y="36.431784107946029"/>
         </scene>
     </scenes>
 </document>
