--- a/BoldyGiffing MessagesExtension/Base.lproj/MainInterface.storyboard
+++ b/BoldyGiffing MessagesExtension/Base.lproj/MainInterface.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13156.6" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ObA-dk-sSI">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13168.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ObA-dk-sSI">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13137.5"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13147.4"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,7 +22,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="CuT-K8-Ww1" userLabel="Thumbnail Collection View">
-                                <rect key="frame" x="5" y="0.0" width="365" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="5" id="xu0-ov-kmd">
                                     <size key="itemSize" width="0.0" height="0.0"/>
@@ -32,16 +32,26 @@
                                 </collectionViewFlowLayout>
                                 <cells/>
                             </collectionView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IDr-Cq-EAu" customClass="CharacterPickerView" customModule="BoldyGiffing_MessagesExtension" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="-667" width="375" height="667"/>
+                                <color key="backgroundColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="CuT-K8-Ww1" firstAttribute="centerY" secondItem="zMn-AG-sqS" secondAttribute="centerY" id="247-tb-YSv"/>
-                            <constraint firstItem="CuT-K8-Ww1" firstAttribute="height" secondItem="zMn-AG-sqS" secondAttribute="height" id="Ae6-Of-62F"/>
-                            <constraint firstItem="CuT-K8-Ww1" firstAttribute="centerX" secondItem="zMn-AG-sqS" secondAttribute="centerX" id="QhS-M0-aoL"/>
-                            <constraint firstItem="CuT-K8-Ww1" firstAttribute="width" secondItem="zMn-AG-sqS" secondAttribute="width" constant="-10" id="ugU-Rp-MfI"/>
+                            <constraint firstItem="CuT-K8-Ww1" firstAttribute="centerY" secondItem="zMn-AG-sqS" secondAttribute="centerY" id="7Xe-RO-Fbs"/>
+                            <constraint firstItem="CuT-K8-Ww1" firstAttribute="height" secondItem="zMn-AG-sqS" secondAttribute="height" id="7p6-kw-eMT"/>
+                            <constraint firstAttribute="trailing" secondItem="IDr-Cq-EAu" secondAttribute="trailing" id="CgR-wB-fQh"/>
+                            <constraint firstItem="IDr-Cq-EAu" firstAttribute="leading" secondItem="zMn-AG-sqS" secondAttribute="leading" id="HbM-rM-qZK"/>
+                            <constraint firstItem="IDr-Cq-EAu" firstAttribute="height" secondItem="zMn-AG-sqS" secondAttribute="height" id="Xwu-sQ-gVp"/>
+                            <constraint firstAttribute="trailing" secondItem="CuT-K8-Ww1" secondAttribute="trailing" id="bf1-XM-5fP"/>
+                            <constraint firstItem="CuT-K8-Ww1" firstAttribute="leading" secondItem="zMn-AG-sqS" secondAttribute="leading" id="mBC-4Z-f1K"/>
+                            <constraint firstAttribute="top" secondItem="IDr-Cq-EAu" secondAttribute="bottom" id="ppj-Kh-OVh"/>
                         </constraints>
                     </view>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <connections>
+                        <outlet property="characterPickerBottomConstraint" destination="ppj-Kh-OVh" id="3zZ-FN-gik"/>
+                        <outlet property="characterPickerView" destination="IDr-Cq-EAu" id="aDz-kd-2hj"/>
                         <outlet property="flowLayout" destination="xu0-ov-kmd" id="r95-UR-LEz"/>
                         <outlet property="thumbnailCollectionView" destination="CuT-K8-Ww1" id="lom-CM-moq"/>
                     </connections>
