--- a/BoldyGiffing MessagesExtension/UI/CharacterPickerView.xib
+++ b/BoldyGiffing MessagesExtension/UI/CharacterPickerView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13168.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13147.4"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -32,17 +32,17 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="355" height="201"/>
+            <rect key="frame" x="0.0" y="0.0" width="671" height="178"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="JWI-3M-adE">
-                    <rect key="frame" x="0.0" y="8" width="113" height="160"/>
+                    <rect key="frame" x="4" y="8" width="215.5" height="137"/>
                     <subviews>
                         <button opaque="NO" clipsSubviews="YES" contentMode="scaleAspectFit" contentHorizontalAlignment="right" contentVerticalAlignment="bottom" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SAU-JZ-6uQ" customClass="LcarsButton" customModule="BoldyGiffing_MessagesExtension" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="0.0" width="113" height="48"/>
+                            <rect key="frame" x="0.0" y="0.0" width="215.5" height="40.5"/>
                             <color key="backgroundColor" red="0.80000000000000004" green="0.60392156862745094" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <fontDescription key="fontDescription" name="Swiss911BT-UltraCompressed" family="Swiss 911" pointSize="21"/>
-                            <inset key="contentEdgeInsets" minX="12" minY="5" maxX="12" maxY="3"/>
+                            <inset key="contentEdgeInsets" minX="12" minY="20" maxX="12" maxY="3"/>
                             <size key="titleShadowOffset" width="0.0" height="4"/>
                             <state key="normal" title="Jean Luc Picard">
                                 <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -52,10 +52,10 @@
                             </connections>
                         </button>
                         <button opaque="NO" clipsSubviews="YES" contentMode="scaleAspectFit" contentHorizontalAlignment="right" contentVerticalAlignment="bottom" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9hS-Eo-dVO" customClass="LcarsButton" customModule="BoldyGiffing_MessagesExtension" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="56" width="113" height="48"/>
+                            <rect key="frame" x="0.0" y="48.5" width="215.5" height="40"/>
                             <color key="backgroundColor" red="1" green="0.59999999999999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <fontDescription key="fontDescription" name="Swiss911BT-UltraCompressed" family="Swiss 911" pointSize="21"/>
-                            <inset key="contentEdgeInsets" minX="12" minY="6" maxX="12" maxY="3"/>
+                            <inset key="contentEdgeInsets" minX="12" minY="20" maxX="12" maxY="3"/>
                             <state key="normal" title="Worf">
                                 <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
@@ -64,10 +64,10 @@
                             </connections>
                         </button>
                         <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="bottom" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9FN-OG-WVA" customClass="LcarsButton" customModule="BoldyGiffing_MessagesExtension" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="112" width="113" height="48"/>
+                            <rect key="frame" x="0.0" y="96.5" width="215.5" height="40.5"/>
                             <color key="backgroundColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <fontDescription key="fontDescription" name="Swiss911BT-UltraCompressed" family="Swiss 911" pointSize="21"/>
-                            <inset key="contentEdgeInsets" minX="12" minY="6" maxX="12" maxY="3"/>
+                            <inset key="contentEdgeInsets" minX="12" minY="20" maxX="12" maxY="3"/>
                             <state key="normal" title="Beverly Crusher">
                                 <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
@@ -78,13 +78,13 @@
                     </subviews>
                 </stackView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="GBA-2H-sPD">
-                    <rect key="frame" x="121" y="8" width="113" height="160"/>
+                    <rect key="frame" x="227.5" y="8" width="216" height="137"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="bottom" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qXP-00-Lz3">
-                            <rect key="frame" x="0.0" y="0.0" width="113" height="48"/>
+                            <rect key="frame" x="0.0" y="0.0" width="216" height="40.5"/>
                             <color key="backgroundColor" red="0.40000000000000002" green="0.53333333333333333" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <fontDescription key="fontDescription" name="Swiss911BT-UltraCompressed" family="Swiss 911" pointSize="21"/>
-                            <inset key="contentEdgeInsets" minX="12" minY="6" maxX="12" maxY="3"/>
+                            <inset key="contentEdgeInsets" minX="12" minY="20" maxX="12" maxY="3"/>
                             <state key="normal" title="William Riker">
                                 <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
@@ -93,10 +93,10 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="bottom" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1s1-BU-1ek">
-                            <rect key="frame" x="0.0" y="56" width="113" height="48"/>
+                            <rect key="frame" x="0.0" y="48.5" width="216" height="40"/>
                             <color key="backgroundColor" red="0.8666666666666667" green="0.40000000000000002" blue="0.30196078431372547" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <fontDescription key="fontDescription" name="Swiss911BT-UltraCompressed" family="Swiss 911" pointSize="21"/>
-                            <inset key="contentEdgeInsets" minX="12" minY="6" maxX="12" maxY="3"/>
+                            <inset key="contentEdgeInsets" minX="12" minY="20" maxX="12" maxY="3"/>
                             <state key="normal" title="Deanna Troi">
                                 <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
@@ -105,10 +105,10 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="bottom" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="io2-9N-Drs">
-                            <rect key="frame" x="0.0" y="112" width="113" height="48"/>
+                            <rect key="frame" x="0.0" y="96.5" width="216" height="40.5"/>
                             <color key="backgroundColor" red="0.80000000000000004" green="0.40000000000000002" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <fontDescription key="fontDescription" name="Swiss911BT-UltraCompressed" family="Swiss 911" pointSize="21"/>
-                            <inset key="contentEdgeInsets" minX="12" minY="6" maxX="12" maxY="3"/>
+                            <inset key="contentEdgeInsets" minX="12" minY="20" maxX="12" maxY="3"/>
                             <state key="normal" title="Tasha Yar">
                                 <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
@@ -119,13 +119,13 @@
                     </subviews>
                 </stackView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="fUE-a5-2eH">
-                    <rect key="frame" x="242" y="8" width="113" height="160"/>
+                    <rect key="frame" x="451.5" y="8" width="215.5" height="137"/>
                     <subviews>
                         <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="bottom" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vqQ-hr-rLS" customClass="LcarsButton" customModule="BoldyGiffing_MessagesExtension" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="0.0" width="113" height="48"/>
+                            <rect key="frame" x="0.0" y="0.0" width="215.5" height="40.5"/>
                             <color key="backgroundColor" red="1" green="0.59999999999999998" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <fontDescription key="fontDescription" name="Swiss911BT-UltraCompressed" family="Swiss 911" pointSize="21"/>
-                            <inset key="contentEdgeInsets" minX="12" minY="6" maxX="12" maxY="3"/>
+                            <inset key="contentEdgeInsets" minX="12" minY="20" maxX="12" maxY="3"/>
                             <state key="normal" title="Data">
                                 <color key="titleColor" red="0.017280046989999999" green="0.01818024801" blue="0.019615188469999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
@@ -134,10 +134,10 @@
                             </connections>
                         </button>
                         <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="bottom" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C4K-eV-DbL" customClass="LcarsButton" customModule="BoldyGiffing_MessagesExtension" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="56" width="113" height="48"/>
+                            <rect key="frame" x="0.0" y="48.5" width="215.5" height="40"/>
                             <color key="backgroundColor" red="0.80000000000000004" green="0.8666666666666667" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <fontDescription key="fontDescription" name="Swiss911BT-UltraCompressed" family="Swiss 911" pointSize="21"/>
-                            <inset key="contentEdgeInsets" minX="12" minY="6" maxX="12" maxY="3"/>
+                            <inset key="contentEdgeInsets" minX="12" minY="20" maxX="12" maxY="3"/>
                             <state key="normal" title="Geordi La Forge">
                                 <color key="titleColor" red="0.017280046989999999" green="0.01818024801" blue="0.019615188469999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
@@ -146,10 +146,10 @@
                             </connections>
                         </button>
                         <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="bottom" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HWR-1y-gsO" customClass="LcarsButton" customModule="BoldyGiffing_MessagesExtension" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="112" width="113" height="48"/>
+                            <rect key="frame" x="0.0" y="96.5" width="215.5" height="40.5"/>
                             <color key="backgroundColor" red="0.0" green="0.40000000000000002" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <fontDescription key="fontDescription" name="Swiss911BT-UltraCompressed" family="Swiss 911" pointSize="21"/>
-                            <inset key="contentEdgeInsets" minX="12" minY="6" maxX="12" maxY="3"/>
+                            <inset key="contentEdgeInsets" minX="12" minY="20" maxX="12" maxY="3"/>
                             <state key="normal" title="All Characters">
                                 <color key="titleColor" red="0.017280046989999999" green="0.01818024801" blue="0.019615188469999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
@@ -160,10 +160,10 @@
                     </subviews>
                 </stackView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6KS-xd-RCt">
-                    <rect key="frame" x="42" y="176" width="271" height="20"/>
+                    <rect key="frame" x="42" y="153" width="587" height="20"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bf3-e8-Oel">
-                            <rect key="frame" x="101.5" y="-2" width="68" height="24"/>
+                            <rect key="frame" x="259.5" y="-2" width="68" height="24"/>
                             <fontDescription key="fontDescription" name="Swiss911BT-UltraCompressed" family="Swiss 911" pointSize="21"/>
                             <inset key="contentEdgeInsets" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
                             <state key="normal" title="Close">
@@ -182,14 +182,14 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6jx-8v-gmq">
-                    <rect key="frame" x="0.0" y="176" width="40" height="20"/>
+                    <rect key="frame" x="0.0" y="153" width="40" height="20"/>
                     <color key="backgroundColor" red="0.20000000000000001" green="0.40000000000000002" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="40" id="Bhp-0r-zcX"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gEX-HQ-8ga">
-                    <rect key="frame" x="315" y="176" width="40" height="20"/>
+                    <rect key="frame" x="631" y="153" width="40" height="20"/>
                     <color key="backgroundColor" red="0.20000000000000001" green="0.40000000000000002" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="40" id="PRX-G7-7pn"/>
@@ -214,15 +214,15 @@
                 <constraint firstAttribute="bottom" secondItem="gEX-HQ-8ga" secondAttribute="bottom" constant="5" id="WVq-Fs-7BJ"/>
                 <constraint firstItem="fUE-a5-2eH" firstAttribute="leading" secondItem="GBA-2H-sPD" secondAttribute="trailing" constant="8" symbolic="YES" id="aQm-xn-QuF"/>
                 <constraint firstItem="gEX-HQ-8ga" firstAttribute="trailing" secondItem="iN0-l3-epB" secondAttribute="trailing" id="bxZ-Uo-34V"/>
-                <constraint firstItem="JWI-3M-adE" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="fqw-3j-Q2R"/>
-                <constraint firstAttribute="trailing" secondItem="fUE-a5-2eH" secondAttribute="trailing" id="haB-xc-BxK"/>
+                <constraint firstItem="JWI-3M-adE" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="4" id="fqw-3j-Q2R"/>
+                <constraint firstAttribute="trailing" secondItem="fUE-a5-2eH" secondAttribute="trailing" constant="4" id="haB-xc-BxK"/>
                 <constraint firstItem="6jx-8v-gmq" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="key-se-CVS"/>
                 <constraint firstItem="GBA-2H-sPD" firstAttribute="top" secondItem="fUE-a5-2eH" secondAttribute="top" id="oKA-pf-OC4"/>
                 <constraint firstItem="JWI-3M-adE" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="qdf-jl-F6s"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="fWx-6W-gaw"/>
-            <point key="canvasLocation" x="90.5" y="-1189.5"/>
+            <point key="canvasLocation" x="90" y="-1190"/>
         </view>
     </objects>
 </document>
